--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
   </h1>
   <h2>I'm a Web Developer</h2>
   <hr /> 
-<h3><a href="./public/movie-ranking.html">Moving Ranking Project</a></h3>
+<h3><a href="movie-ranking.html">Moving Ranking Project</a></h3>
   <hr />
-<img src="./assets/images/movie-ranking.png" height =200px>
+<img src="movie-ranking.png" height =200px>
   
   
-<h3><a href="./public/birthday-invite.html">Birthday Invitation Project</a></h3>
-  <img src="./assets/images/birthday-invite.png" height ="200px">
+<h3><a href="birthday-invite.html">Birthday Invitation Project</a></h3>
+  <img src="birthday-invite.png" height ="200px">
   <hr />
-  <a href="./public/about.html">About Me</a>
+  <a href="about.html">About Me</a>
   
-  <a href="./public/contact.html">Contact Me</a>
+  <a href="contact.html">Contact Me</a>
 </body>
 </html>
